[gd_scene load_steps=6 format=3 uid="uid://cfm38gpbm75to"]

[ext_resource type="Script" uid="uid://eott4646oq78" path="res://scripts/tuberias.gd" id="1_g5n06"]
[ext_resource type="PackedScene" uid="uid://jjbnwgmwe44" path="res://escenas/tuberia.tscn" id="1_h2mbc"]
[ext_resource type="AudioStream" uid="uid://bewelh5fhdakg" path="res://assets/flappy-bird-assets-master/audio/die.ogg" id="3_klyvm"]
[ext_resource type="AudioStream" uid="uid://bm7x2x7jjulwe" path="res://assets/flappy-bird-assets-master/audio/point.ogg" id="4_lmcim"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5n06"]
size = Vector2(26, 104)

[node name="Tubos" type="Node2D"]
script = ExtResource("1_g5n06")

[node name="arriba" parent="." instance=ExtResource("1_h2mbc")]

[node name="abajo" parent="." instance=ExtResource("1_h2mbc")]
position = Vector2(2, -421)
rotation = 3.14159

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(45, -212)
shape = SubResource("RectangleShape2D_g5n06")

[node name="choque_tubo" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_klyvm")

[node name="moneda" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lmcim")

[connection signal="body_entered" from="arriba" to="." method="_on_abajo_body_entered"]
[connection signal="body_entered" from="abajo" to="." method="_on_abajo_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_score_body_entered"]
